# vst-host

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  createProject.bat
src/cli/: main.cpp
src/gui/: main.cpp
src/static/: SharedLibrary.cpp  SharedLibrary.h  VST.cpp  VST.h  VST24.cpp  VST24.h
